[gd_scene load_steps=17 format=2]

[ext_resource path="res://world/World.tscn" type="PackedScene" id=1]
[ext_resource path="res://main/GUI.gd" type="Script" id=2]
[ext_resource path="res://gui/assets/panel.png" type="Texture" id=3]
[ext_resource path="res://gui/assets/fonts/MontserratAlternates-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://gui/assets/fonts/timer_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://main/main_label_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://gui/assets/button.png" type="Texture" id=7]
[ext_resource path="res://main/button_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://gui/assets/sarturobot.png" type="Texture" id=9]
[ext_resource path="res://gui/assets/title.png" type="Texture" id=10]
[ext_resource path="res://gui/assets/sounds/click.ogg" type="AudioStream" id=11]
[ext_resource path="res://gui/assets/sounds/music_background.ogg" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_size = 2
outline_color = Color( 0.843137, 0.113725, 0.113725, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 2
outline_color = Color( 1, 0.145098, 0.0705882, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 1
outline_color = Color( 0.0392157, 0.286275, 0.505882, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_size = 2
outline_color = Color( 0.109804, 0.109804, 0.109804, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Main" type="Node"]

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="GUI" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -131.0
margin_right = -4.0
margin_bottom = 54.0
custom_constants/margin_left = 14

[node name="Panel" type="TextureRect" parent="GUI/MarginContainer"]
editor/display_folded = true
margin_left = 14.0
margin_right = 141.0
margin_bottom = 185.0
texture = ExtResource( 3 )

[node name="TimeLabel" type="Label" parent="GUI/MarginContainer/Panel"]
margin_left = 13.0
margin_top = 35.0
margin_right = 118.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "TIME"

[node name="MinutesLabel" type="Label" parent="GUI/MarginContainer/Panel"]
margin_left = 15.0
margin_top = 87.0
margin_right = 36.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 5 )
text = "3"
valign = 1

[node name="SecondsLabel" type="Label" parent="GUI/MarginContainer/Panel"]
margin_left = 71.8407
margin_top = 88.0807
margin_right = 119.841
margin_bottom = 131.081
custom_fonts/font = ExtResource( 5 )
text = "00"
valign = 1

[node name="SeparatorLabel" type="Label" parent="GUI/MarginContainer/Panel"]
margin_left = 52.0067
margin_top = 85.2982
margin_right = 306.007
margin_bottom = 128.298
custom_fonts/font = ExtResource( 5 )
text = ":"
valign = 1

[node name="GameOverContainer" type="MarginContainer" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -23.5
margin_right = 127.0
margin_bottom = 23.5
custom_constants/margin_top = -52
custom_constants/margin_left = -49

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/GameOverContainer"]
margin_left = -49.0
margin_top = -52.0
margin_right = 254.0
margin_bottom = 57.0

[node name="GameOverLabel" type="Label" parent="GUI/GameOverContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 6 )
text = "YOU WIN!"

[node name="RestartButton" type="TextureButton" parent="GUI/GameOverContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 303.0
margin_bottom = 109.0
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="GUI/GameOverContainer/VBoxContainer/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.087
margin_top = -21.4044
margin_right = 38.9127
margin_bottom = 23.5956
custom_fonts/font = ExtResource( 8 )
text = "RESTART"
align = 1

[node name="EndGameContainer" type="MarginContainer" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -23.5
margin_right = 127.0
margin_bottom = 23.5
custom_constants/margin_top = -52
custom_constants/margin_left = -49

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/EndGameContainer"]
margin_left = -49.0
margin_top = -52.0
margin_right = 254.0
margin_bottom = 57.0

[node name="EndGameLabel" type="Label" parent="GUI/EndGameContainer/VBoxContainer"]
margin_right = 303.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "YOU LOST!"

[node name="RestartButton" type="TextureButton" parent="GUI/EndGameContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 51.0
margin_right = 303.0
margin_bottom = 109.0
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="GUI/EndGameContainer/VBoxContainer/RestartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.087
margin_top = -21.4044
margin_right = 38.9127
margin_bottom = 23.5956
custom_fonts/font = ExtResource( 8 )
text = "RESTART"
align = 1

[node name="Credits" type="MarginContainer" parent="GUI"]
modulate = Color( 0.788235, 0.788235, 0.788235, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -74.7
margin_top = -117.3
margin_right = -5.69995
margin_bottom = -32.3
custom_constants/margin_top = -70
custom_constants/margin_left = -31

[node name="TextureRect" type="TextureRect" parent="GUI/Credits"]
margin_left = -31.0
margin_top = -70.0
margin_right = 69.0
margin_bottom = 85.0
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="GUI/Credits/TextureRect"]
margin_left = -19.0
margin_top = 89.0
margin_right = 89.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 3 )
text = "Created by 
Sarturo
V 0.1"
align = 1
valign = 1

[node name="MainMenuContainer" type="MarginContainer" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.5
margin_top = -124.0
margin_right = 265.5
margin_bottom = 124.0
custom_constants/margin_top = -50
custom_constants/margin_left = -30

[node name="Title" type="TextureRect" parent="GUI/MainMenuContainer"]
margin_left = -30.0
margin_top = -50.0
margin_right = 531.0
margin_bottom = 248.0
texture = ExtResource( 10 )

[node name="PlayButton" type="TextureButton" parent="GUI/MainMenuContainer/Title"]
margin_left = 94.9576
margin_top = 191.292
margin_right = 625.958
margin_bottom = 249.292
texture_normal = ExtResource( 7 )

[node name="Label" type="Label" parent="GUI/MainMenuContainer/Title/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -251.399
margin_top = -21.4044
margin_right = -77.3993
margin_bottom = 23.5956
custom_fonts/font = ExtResource( 8 )
text = "PLAY"
align = 1

[node name="Tutorial" type="MarginContainer" parent="GUI/MainMenuContainer/Title/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -441.867
margin_top = 21.3267
margin_right = 284.133
margin_bottom = 166.327
custom_constants/margin_top = 4
custom_constants/margin_left = -165

[node name="Label" type="Label" parent="GUI/MainMenuContainer/Title/PlayButton/Tutorial"]
margin_left = -165.0
margin_top = 28.0
margin_right = 726.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 8 )
text = "Click to play
Survive 3 minutes to win!"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/MainMenuContainer/Title/PlayButton/Tutorial/Label"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -239.5
margin_top = -45.0
margin_right = 239.5
custom_constants/margin_top = 45

[node name="Label2" type="Label" parent="GUI/MainMenuContainer/Title/PlayButton/Tutorial/Label/MarginContainer"]
margin_top = 45.0
margin_right = 479.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.87451, 0.286275, 0.286275, 1 )
text = "Controls: Left click to run"
align = 1

[node name="ClickAudio" type="AudioStreamPlayer" parent="GUI"]
stream = ExtResource( 11 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="GUI"]
stream = ExtResource( 12 )
volume_db = -4.0
autoplay = true
[connection signal="game_lost" from="World" to="GUI" method="_on_World_game_lost"]
[connection signal="game_over" from="World" to="GUI" method="_on_World_game_over"]
[connection signal="game_started" from="World" to="GUI" method="_on_World_game_started"]
[connection signal="update_time" from="World" to="GUI" method="_on_World_update_time"]
[connection signal="game_restarted" from="GUI" to="World" method="_on_GUI_game_restarted"]
[connection signal="game_started" from="GUI" to="World" method="_on_GUI_game_started"]
[connection signal="pressed" from="GUI/GameOverContainer/VBoxContainer/RestartButton" to="GUI" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GUI/EndGameContainer/VBoxContainer/RestartButton" to="GUI" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="GUI/MainMenuContainer/Title/PlayButton" to="GUI" method="_on_PlayButton_pressed"]
